--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "prop-types": "^15.7.2",
     "react-router-dom": "^5.0.1",
     "snyk": "^1.173.1",
+    "styled-components": "^4.3.2",
     "universal-fetch": "^1.0.0"
   },
   "snyk": true,
