--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@types/react-dom": "16.8.4",
     "@types/react-router-dom": "^4.3.4",
     "@types/styled-components": "^4.1.16",
+    "firebase": "^6.2.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-firebaseui": "^3.1.2",
     "react-scripts": "3.0.1",
     "styled-components": "^4.3.2",
     "typescript": "3.5.2"
