--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@material-ui/core": "^4.3.1",
     "@material-ui/icons": "^4.2.1",
+    "@testing-library/react": "^8.0.8",
     "firebase": "^6.3.3",
+    "jest-dom": "^4.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-firebaseui": "^3.1.2",
