--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-sidebar": "^3.0.2",
+    "react-stack-grid": "^0.7.1",
     "react-toastify": "^5.3.2",
     "redux": "^4.0.4",
     "styled-components": "^4.3.2"
